<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <!--Titulo del contenido nombre-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:layout_gravity="start"
        android:id="@+id/txtNombre"
        />

    <EditText
        android:id = "@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_name"
        android:layout_marginBottom="5dp"
        />

    <!--Titulo del contenido edad-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEdad"
        android:layout_gravity="start"
        android:id="@+id/txtEdad"
        />

    <EditText
        android:id = "@+id/edtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_edad"
        android:layout_marginBottom="5dp"
        />

    <!--Titulo del contenido ciudad-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCiudad"
        android:layout_gravity="start"
        android:id="@+id/txtCiudad"
        />

    <EditText
        android:id = "@+id/edtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_ciudad"
        android:layout_marginBottom="5dp"
        />

    <!--Titulo del contenido correo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCorreo"
        android:layout_gravity="start"
        android:id="@+id/txtCorreo"
        />

    <EditText
        android:id = "@+id/edtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_correo"

        />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_btn"
        android:layout_marginTop="20dp"
        />

</LinearLayout>